# video-downloader

./: .gitignore  AGENTS.md  AGENTS_REQUIREMENT.md  README.md  note.md
.antigravitycli/: 8216811b-1119-4618-9061-7d343e7ce440.json
backend/: Cargo.toml  README.md
backend/src/: bulk.rs  main.rs  model.rs
backend/src/channel/: mod.rs
backend/src/extract/: facebook.rs  mod.rs  tiktok.rs  youtube.rs
docs/: ARCHITECTURE.md  README.md  TEST_MATRIX.md
docs/product/: README.md  bulk-download.md  channel-fetching.md  extraction.md  platform.md
docs/stories/: README.md  US-001-frontend-nextjs.md  US-002-backend-axum.md  US-003-health-integration.md
docs/stories/epic-02-single-extraction/: US-004-video-info-model.md  US-005-youtube-parser.md  US-006-tiktok-parser.md  design.md  execplan.md  overview.md  validation.md
docs/stories/epic-03-channel-fetching/: US-007-youtube-channel-fetching.md  US-008-tiktok-profile-fetching.md  design.md  execplan.md  overview.md  validation.md
docs/stories/epic-04-bulk-download/: US-009-frontend-bulk-ui.md  US-010-backend-bulk-worker.md  design.md  execplan.md  overview.md  validation.md
docs/stories/epic-05-facebook-extraction/: US-011-facebook-single-parser.md  US-012-facebook-page-profile.md  design.md  execplan.md  overview.md  validation.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
