[package]
name = "videodownloader-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.9"
bytes = "=1.11.1"
futures-util = { version = "=0.3.32", default-features = false, features = ["std"] }
regex = "=1.12.2"
reqwest = { version = "=0.12.28", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "stream"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "=0.6.11", features = ["cors"] }

[dev-dependencies]
http-body-util = "=0.1.3"
tower = { version = "=0.5.3", features = ["util"] }
